refactor: Updated Hero section.

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -44,7 +44,7 @@ import CmdK from '@/components/CmdK.astro'
       <NavLink
         href='mailto:aaron@dotmd.io'
         tooltip='Contacto'
-        ><Contact /></NavLink
+        ><Contact class='w-6' /></NavLink
       >
     </li>
     <li>
