--- a/src/components/sections/Education.astro
+++ b/src/components/sections/Education.astro
@@ -23,7 +23,7 @@ import { education } from '@cv'
                 <time>{years}</time>
               </header>
 
-              <footer>
+              <footer class='text-prose'>
                 <p>{area}</p>
               </footer>
             </article>
