--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -45,7 +45,7 @@ import { work } from '@cv'
                 </div>
               </header>
 
-              <footer>
+              <footer class='text-prose'>
                 <p>{summary}</p>
               </footer>
             </article>
