--- a/src/icons/Contact.astro
+++ b/src/icons/Contact.astro
@@ -1,6 +1,10 @@
+---
+const props = Astro.props
+---
+
 <svg
   xmlns='http://www.w3.org/2000/svg'
-  class='w-6'
+  {...props}
   fill='none'
   viewBox='0 0 24 24'
   ><path
