--- a/src/components/stack/Hardware.astro
+++ b/src/components/stack/Hardware.astro
@@ -1,5 +1,5 @@
 ---
-import Item from '@/components/sections/stack/Item.astro'
+import Item from '@/components/stack/Item.astro'
 ---
 
 <section class='relative flex w-full flex-col'>
