--- a/src/components/stack/Item.astro
+++ b/src/components/stack/Item.astro
@@ -21,7 +21,7 @@ const Icon = SOFTWARE_ICONS[img]
 ---
 
 <article
-  class='relative flex flex-col gap-8 rounded-2xl bg-[#f8f8f8] p-2 transition hover:bg-hover dark:bg-secondary'
+  class='relative flex flex-col gap-8 rounded-2xl bg-[#f8f8f8] p-2 transition dark:bg-secondary dark:hover:bg-hover'
 >
   <a
     href={href}
