--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -42,7 +42,7 @@ import CmdK from '@/components/CmdK.astro'
         </li>-->
     <li>
       <NavLink
-        href='mailto:aaron@dotmd.io'
+        href='/contacto'
         tooltip='Contacto'
         ><Contact class='w-6' /></NavLink
       >
