--- a/src/pages/contacto/index.astro
+++ b/src/pages/contacto/index.astro
@@ -1,17 +1,14 @@
 ---
 import Layout from '@/layouts/Layout.astro'
-import ContacForm from '@/components/ContactForm.tsx'
+
+import { basics } from '@cv'
+const { name, label } = basics
 ---
 
 <Layout
-  title={`Contacto`}
+  title={`Portafolio de ${name} - ${label}`}
   description='Contacto'
   img='/me.webp'
 >
-  <main class='w-full px-6 pb-[65px] pt-6 md:pt-[65px]'>
-    <header class='mx-auto max-w-[65ch] pb-8'>
-      <h1 class='text-xl'>Contacta conmigo a través del formulario:</h1>
-    </header>
-    <ContacForm client:load />
-  </main>
+  <main>Contacto</main>
 </Layout>
