refactor: Update domain

--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -44,10 +44,10 @@ const canonicalURL = canonical
 <meta name='twitter:creator' content='@dotmdx' />
 <meta name='twitter:title' content={title} />
 <meta name='twitter:description' content={description} />
-<meta name='twitter:image' content={`https://dotmdx.com${img}`} />
+<meta name='twitter:image' content={`https://dotmd.io${img}`} />
 
-<meta name='og:image' content={`https://dotmdx.com${img}`} />
-<meta property='og:image' content={`https://dotmdx.com${img}`} />
+<meta name='og:image' content={`https://dotmd.io${img}`} />
+<meta property='og:image' content={`https://dotmd.io${img}`} />
 <meta property='og:image:type' content='image/webp' />
 <meta name='og:title' content={title} />
 <meta name='og:description' content={description} />
