Update mail and no print on hero section

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -82,7 +82,7 @@ const printInfo = [email, siteUrl, linkedUrl].filter(Boolean).join(' • ')
       </p>
     </div>
     <div
-      class='mx-auto flex w-full flex-col items-center justify-center gap-1 text-sm sm:max-w-[80%] sm:flex-row sm:gap-4'
+      class='mx-auto flex w-full flex-col items-center justify-center gap-1 text-sm sm:max-w-[80%] sm:flex-row sm:gap-4 print:hidden'
     >
       <a
         class='flex w-full grow items-center justify-center gap-2 rounded-lg border bg-[#f8f8f8] py-2 text-black transition dark:border-primary dark:bg-white dark:hover:bg-[#f8f8f8]'
