refactor: Update styles and color variables for improved dark mode support

--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -4,6 +4,12 @@ const { title, className } = Astro.props
 ---
 
 <section class={`relative mx-auto mb-9 max-w-[65ch] md:mb-12 ${className}`}>
-  {title && <h2 class='mb-6 text-secondary lg:absolute lg:-left-36 lg:mb-0 lg:flex'>{title}</h2>}
+  {
+    title && (
+      <h2 class='mb-6 text-muted lg:absolute lg:-left-36 lg:mb-0 lg:flex'>
+        {title}
+      </h2>
+    )
+  }
   <slot />
 </section>
