--- a/src/components/blog/Post.astro
+++ b/src/components/blog/Post.astro
@@ -12,11 +12,11 @@ const date = post.data.pubDate.toLocaleDateString('es-ES', {
 })
 ---
 
-<article class='relative rounded-lg bg-[#f8f8f8] transition dark:bg-secondary dark:hover:bg-hover'>
-  <a
-    href={`/blog/${post.slug}`}
-    class='absolute h-full w-full'
-  >
+<article
+  transition:name={post.slug}
+  class='relative rounded-lg bg-[#f8f8f8] transition dark:bg-secondary dark:hover:bg-hover'
+>
+  <a href={`/blog/${post.slug}`} class='absolute h-full w-full'>
     <span class='sr-only'>{post.data.title}</span></a
   >
   <div class='flex flex-col justify-between gap-4 text-pretty p-4'>
@@ -25,11 +25,8 @@ const date = post.data.pubDate.toLocaleDateString('es-ES', {
       {post.data.fixed && <Fixed />}
     </header>
     <p class='line-clamp-2 text-sm text-prose'>{post.data.description}</p>
-    <footer class='flex items-center justify-between text-sm text-secondary'>
-      <time
-        datetime={date}
-        data-title={date}
-      >
+    <footer class='flex items-center justify-between text-sm text-muted'>
+      <time datetime={date} data-title={date}>
         {date}
       </time>
       <div class='flex items-center gap-2 text-sm'>
