--- a/src/components/stack/Hardware.astro
+++ b/src/components/stack/Hardware.astro
@@ -4,7 +4,7 @@ import Item from '@/components/stack/Item.astro'
 
 <section class='relative flex w-full flex-col'>
   <header class='mb-6 lg:mb-0'>
-    <h2 class='text-secondary lg:absolute lg:-left-28 lg:flex'>Hardware</h2>
+    <h2 class='text-muted lg:absolute lg:-left-28 lg:flex'>Hardware</h2>
   </header>
   <div class='grid gap-2 sm:grid-cols-2'>
     <Item
