--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -40,12 +40,12 @@ const printInfo = [email, siteUrl, linkedUrl].filter(Boolean).join(' • ')
     </figure>
     <div class='flex flex-col items-center justify-center gap-4'>
       <h1 class='w-fit text-2xl'>{name}</h1>
-      <h2 class='text-balance text-secondary'>{label}</h2>
+      <h2 class='text-balance text-muted'>{label}</h2>
 
-      <footer class='hidden text-sm text-secondary print:flex'>
+      <footer class='hidden text-sm text-muted print:flex'>
         {printInfo}
       </footer>
-      <footer class='mt-2 flex gap-6 text-sm text-secondary print:hidden'>
+      <footer class='mt-2 flex gap-6 text-sm text-muted print:hidden'>
         {
           profiles.map(({ network, url, username }) => {
             const Icon = SOCIAL_ICONS[network]
@@ -77,7 +77,7 @@ const printInfo = [email, siteUrl, linkedUrl].filter(Boolean).join(' • ')
         <span class='relative inline-flex h-2 w-2 rounded-full bg-emerald-500'
         ></span>
       </span>
-      <p class='text-sm text-secondary sm:text-base dark:text-prose'>
+      <p class='text-sm text-muted sm:text-base dark:text-prose'>
         Disponible para nuevos proyectos.
       </p>
     </div>
@@ -85,19 +85,19 @@ const printInfo = [email, siteUrl, linkedUrl].filter(Boolean).join(' • ')
       class='mx-auto flex w-full flex-col items-center justify-center gap-1 text-sm sm:max-w-[80%] sm:flex-row sm:gap-4 print:hidden'
     >
       <a
-        class='flex w-full grow items-center justify-center gap-2 rounded-lg border bg-[#f8f8f8] py-2 text-black transition dark:border-primary dark:bg-white dark:hover:bg-[#f8f8f8]'
+        class='flex w-full grow items-center justify-center gap-2 rounded-lg border bg-[#f8f8f8] py-2 text-black transition dark:border-tertiary dark:bg-white dark:hover:bg-[#f8f8f8]'
         href='/contacto'
         >Contacta conmigo <Contact class='w-4 text-[#707070]' /></a
       >
-      <span class='text-secondary'>o</span>
+      <span class='text-muted'>o</span>
       <a
         href='/Portafolio Aaron.pdf'
-        class='flex w-full grow items-center justify-center rounded-lg border bg-[#f8f8f8] py-2 transition dark:border-primary dark:bg-secondary dark:hover:bg-hover'
+        class='flex w-full grow items-center justify-center rounded-lg border bg-[#f8f8f8] py-2 transition dark:border-tertiary dark:bg-secondary dark:hover:bg-hover'
         target='_blank'
         rel='noopener noreferrer'>Descarga mi currículum</a
       >
     </div>
-    <span class='flex items-center gap-1 text-sm text-secondary'>
+    <span class='flex items-center gap-1 text-sm text-muted'>
       <WorldMap />
       {city}, {region}
     </span>
